package com.mhm.struct.adapter;

/**
 * 源角色，适配者
 * @author MHm
 * @date 2020-4-18 15:31
 */
public class Adaptee {
    public void adpaterRequest(){
        System.out.println("我是380V");
    }
}
