package com.mhm.struct.adapter;

/**
 * 目标角色，被适配者
 * @author MHm
 * @date 2020-4-18 15:31
 */
public interface Target {
    public void request();
}
